# pet_project_-_good_habits

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  pyproject.toml  requirements.txt
apps/habit/: admin.py  apps.py  models.py  paginations.py  serliazers.py  services.py  tasks.py  tests.py  urls.py  validators.py
apps/habit/migrations/: 0001_initial.py  0002_initial.py
apps/habit/views/: GoodHabit.py  Habit.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: create_su.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
core/: permissions.py
