[tool.poetry]
name = "drf-coursework"
version = "0.1.0"
description = ""
authors = ["Valera K <vk1337atliberty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
django = "^5.0.6"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
celery = "^5.4.0"
psycopg2 = "^2.9.9"
django-celery-beat = "^2.6.0"
requests = "^2.32.3"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
